2001-02-16  Benjamin Chelf  <chelf@codesourcery.com>

	* qm/command_line.py: Fix coding standards issues.
	* qm/track/idb.py (IdbBase::PerformQuery): Define.
	* qm/track/qmtrack.py: Fix split up strings to use 'printf' syntax.
	(CommandLine::PerformQuery): Move code into idb.py. Only do UI stuff.
	
2001-02-15  Benjamin Chelf  <chelf@codesourcery.com>

	* qm/track/qmtrack.py: Fix coding standards issues.
	* qm/track/issue_class.py: Likewise.
	* qm/track/memory_idb.py: Likewise.

	* qm/command_line.py (CommandParser::ParseCommandLine): Fix
	to use 'write' instead of print. Add code to check for command
	existence.
	
2001-02-14  Benjamin Chelf  <chelf@codesourcery.com>

	* qm/track/issue_class.py (IssueFieldEnumeration::GetEnumeration): 
	Define.
	(IssueClass::__init__): Make 'iid' have no default value.

	* qm/track/memory_idb.py (MemoryIdb::GetIssues): Define.

	* qm/track/qmtrack.py (CommandLine::__init__): Initialize 
	results.
	(CommandLine::ParseFieldValuePairs): Handle no '=' in string.
	(CommandLine::OpenDatabase): Change warning to error.
	(CommandLine::PerformCreate): Fix bugs and do type checking on
	fields. Do mandatory fields correctly.
	(CommandLine::CheckFieldTypes): Define.
	(CommandLine::PerformEdit): Fix bugs and do type checking on
	fields.
	(CommandLine::PerformQuery): Define.
	
2001-02-12  Benjamin Chelf  <chelf@codesourcery.com>

        * qm/track/qmtrack.py (__main__): Change to catch exception.
	* qm/command_line.py (ErrorHandler): Change to raise exception.
	
	* qm/track/qmtrack.py (PrintResults): Change from 'print' to
	write.

2001-02-11  Benjamin Chelf  <chelf@codesourcery.com>

	* qm/command_line.py (ErrorHandler): New method.
	(__init): Add output parameter.
	(ParseCommandLine): Fix bugs.
	
	* qm/track/qmtrack.py: New file.

2001-02-08  Alex Samuel  <samuel@codesourcery.com>

	Module zope-dtml is now part of this module.  Add configury to set
	up and use it.
	
	* configure.in (/usr/lib/python1.5/config/Makefile.pre.in): Check file.